--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -10,8 +10,6 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
-  // background-position: center;
-  // background-size: cover;
   overflow: hidden;
 
   &:hover {
@@ -39,6 +37,12 @@
   &:last-child {
     margin-left: 7.5px;
   }
+ .background-image {
+   width: 100%;
+   height: 100%;
+   background-position: center;
+   background-size: cover;
+ }
 
   .content {
     height: 90px;
@@ -54,7 +58,7 @@
 
     .title{
       font-weight: bold;
-      margin-bottom: 6px;
+      margin: 0 6px 0;
       font-size: 22px;
       color: #4a4a4a;
     }
